Alex's fix for popup width on IE
git-svn-id: svn://svn.orangeleap.com/tangerine/mpower/trunk@3047 0f581344-5646-3a48-8ded-616bfea576c6

--- a/war/css/pages.css
+++ b/war/css/pages.css
@@ -353,6 +353,10 @@ td.inactive {
 margin-right:30px;
 }
 
+.codeList {
+    overflow-x:hidden;
+}
+
 .mpHeaderSortDown {
 	background-image: url(../images/asc.gif);
 }
